fix: make custom scrollbars to show only in desktop devices
did this to allow mobile devices show their specific scrollbars

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -63,25 +63,27 @@ body {
   }
 }
 
-::-webkit-scrollbar {
-  width: 12px;
-  height: 12px;
-}
+@media (max-resolution: 1dppx) {
+  ::-webkit-scrollbar {
+    width: 12px;
+    height: 12px;
+  }
 
-::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 6px gray;
-  border-radius: 16px;
-}
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px gray;
+    border-radius: 16px;
+  }
 
-::-webkit-scrollbar-thumb {
-  // primary color for light blue (level 500) with opacity
-  background: #03a9f480;
-  border-radius: 16px;
-}
+  ::-webkit-scrollbar-thumb {
+    // primary color for light blue (level 500) with opacity
+    background: #03a9f480;
+    border-radius: 16px;
+  }
 
-::-webkit-scrollbar-thumb:hover {
-  // primary color for light blue (level 500)
-  background: #03a9f4;
+  ::-webkit-scrollbar-thumb:hover {
+    // primary color for light blue (level 500)
+    background: #03a9f4;
+  }
 }
 
 button[mat-fab] {
@@ -133,4 +135,3 @@ button[mat-fab].second-from-bottom {
   margin-bottom: -64px;
   margin-right: 64px;
 }
-
